# iot_surf_clock

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README  README.md
pi/: client.py  iot_surf_clock.service  requirements.txt
server/: README.md  cache.py  config.py  display.py  emulator.py  main.py  models.py  requirements.txt
server/routers/: surf.py  swim.py  weather.py
server/scrapers/: metservice.py  openmeteo.py  safeswim.py
server/tests/: conftest.py  test_cache.py  test_metservice_parser.py  test_surf_api.py  test_weather_api.py
src/: main.cpp
src/api/: news.hpp  weather.hpp
src/audio/: audio.hpp  audio_mock.hpp
src/display/: display.hpp  display_mock.hpp
src/hal/: gpio.hpp  gpio_mock.hpp  gpio_real.cpp  gpio_real.hpp
src/relay/: relay.hpp
src/scheduler/: scheduler.cpp  scheduler.hpp
src/voice/: voice.hpp
tests/: test_relay.cpp  test_scheduler.cpp
